--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             Cras ac odio viverra, semper est id, facilisis lectus. Aliquam eget sollicitudin eros, at posuere lorem. Sed consectetur libero elit, sit amet ultrices eros auctor mollis. Praesent egestas blandit rutrum. Phasellus vel pretium nulla. Donec ut varius sapien. In maximus tincidunt lorem egestas eleifend. Vestibulum cursus ante eget urna tempor, quis viverra mauris viverra. Ut nibh lorem, bibendum in accumsan quis, ullamcorper sed tortor. Integer blandit aliquam nibh in pulvinar. Curabitur a malesuada purus, at scelerisque ligula. Morbi malesuada pellentesque neque, id condimentum purus finibus eu.
           </p>
         </article>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="assets/js/sidebar.js"></script>
 
         <footer>
           Made in Texas. @ 2019 All Rights Reserved
@@ -64,5 +65,6 @@
       </main>
     </div>
   </div>
+  
 </body>
 </html>
